--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/erwaiyang/redux-code-generator/issues"
   },
-  "homepage": "https://github.com/erwaiyang/redux-code-generator#readme"
+  "homepage": "https://github.com/erwaiyang/redux-code-generator#readme",
+  "dependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
+  }
 }
