test:watch script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A code generator",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "test:watch": "mocha -w"
   },
   "repository": {
     "type": "git",
