--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/erwaiyang/redux-code-generator/issues"
   },
   "homepage": "https://github.com/erwaiyang/redux-code-generator#readme",
-  "dependencies": {
+  "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.0.1"
   }
