--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A code generator",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config webpack.config.js",
     "lint": "eslint .",
     "test": "mocha",
     "test:watch": "mocha -w"
@@ -23,13 +24,17 @@
   },
   "homepage": "https://github.com/erwaiyang/redux-code-generator#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "2.7.0",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "webpack": "^3.8.1"
   }
 }
