--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "webpack --config webpack.config.js",
     "start": "webpack -w --config webpack.config.js",
     "lint": "eslint .",
-    "test": "mocha",
-    "test:watch": "mocha -w"
+    "test": "NODE_ENV=test mocha ./test",
+    "test:watch": "NODE_ENV=test mocha -w ./test",
+    "coverage": "nyc npm test"
   },
   "repository": {
     "type": "git",
@@ -31,12 +32,30 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "copy-webpack-plugin": "^4.2.0",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "2.7.0",
     "mocha": "^4.0.1",
+    "nyc": "^11.2.1",
     "webpack": "^3.8.1"
+  },
+  "nyc": {
+    "per-file": true,
+    "include": [
+      "src"
+    ],
+    "exclude": [
+      "webpack.config.js",
+      "test"
+    ],
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ],
+    "all": true,
+    "sourceMap": false
   }
 }
