babel-plugin-istanbul for better coverage detection

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,11 @@
   "env": {
     "targets": {
       "browsers": ["last 2 versions", "safari >= 7"]
+    },
+    "test": {
+      "plugins": [
+        "istanbul"
+      ]
     }
    }
 }
